# Plumba

./: .gitignore  CMakeLists.txt  resource.qrc
cpp/: main.cpp
qml/: Main.qml
qml/components/: TitleBar.qml  Tooltip.qml
qml/pages/: HomePage.qml
rust/: Cargo.toml  build.rs
rust/src/: cxxqt_object.rs  lib.rs
